--- a/templates/cisco_nxos_show_interface_stat.template
+++ b/templates/cisco_nxos_show_interface_stat.template
@@ -1,4 +1,4 @@
-Value PORT (.*?)
+Value PORT (\S+)
 Value NAME (\S+(?:\s\w+\s\w+)?)
 Value STATUS (\w+?)
 Value VLAN (\w+|\d+?)
@@ -7,4 +7,4 @@ Value SPEED (.*?)
 Value TYPE (.*?)
 
 Start
-  ^${PORT}\s+${NAME}\s+${STATUS}\s+${VLAN}\s+${DUPLEX}\s+${SPEED}\s+${TYPE}$$ -> Record
+  ^${PORT}\s+${NAME}\s+? ${STATUS}\s+${VLAN}\s+${DUPLEX}\s+${SPEED}\s+${TYPE}$$ -> Record
