--- a/templates/cisco_nxos_show_ipintbr.template
+++ b/templates/cisco_nxos_show_ipintbr.template
@@ -1,10 +1,10 @@
-Value VRF (\S+)
-Value Interface (\S+)
-Value IPAddress (\d+\.\d+\.\d+\.\d+)
-Value Protocol (protocol-up|protocol-down)
-Value Link (link-ip|link-down)
-Value AdminStatus (admin-up|admin-down)
+Value Filldown VRF_VALUE (\S+)
+Value INTERFACE_VALUE (\S+)
+Value IPADD_VALUE (\d+\.\d+\.\d+\.\d+)
+Value PROTO_VALUE (protocol-up|protocol-down)
+Value LINK_VALUE (link-ip|link-down)
+Value ADMIN_VALUE (admin-up|admin-down)
 
 Start
-  ^IP Interface Status for VRF \"$(VRF)\" -> Continue
-  ^$(Interface)\s+$(IPAddress)\s+$(Protocol)/$(Link)/$(AdminStatus) -> Record
+  ^IP Interface Status for VRF "${VRF_VALUE}" -> Continue
+  ^${INTERFACE_VALUE}\s+${IPADD_VALUE}\s+${PROTO_VALUE}/${LINK_VALUE}/${ADMIN_VALUE} -> Record
