--- a/templates/cisco_ios_show_interfaces_health.template
+++ b/templates/cisco_ios_show_interfaces_health.template
@@ -11,6 +11,7 @@ Value CRC_ERRORS (\d+)
 Value OUTPUT_ERRORS (\d+)
 Value COLLISIONS (\d+)
 Value INTERFACE_RESETS (\d+)
+Value OUTPUT_DROPS (\d+)
 
 
 Start
@@ -18,6 +19,7 @@ Start
   ^\s+Hardware is ${HARDWARE_TYPE} -> Continue
   ^.*address is ${ADDRESS}.*bia ${BIA}
   ^\s+${DUPLEX}, ${SPEED}, media type
+  ^.*output drops:\s+${OUTPUT_DROPS} -> Continue
   ^\s+${INPUT_ERRORS} input errors -> Continue
   ^.*${CRC_ERRORS} CRC
   ^\s+${OUTPUT_ERRORS} output errors -> Continue
