--- a/templates/cisco_ios_show_cdp_nei_detail.template
+++ b/templates/cisco_ios_show_cdp_nei_detail.template
@@ -1,19 +1,22 @@
-Value Required dest_host (\S+)
-Value mgmt_ip (.*)
-Value platform (.*)
-Value remote_port (.*)
-Value local_port (.*)
-Value version (.*)
+Value Required DESTINATION_HOST (\S+)
+Value MANAGEMENT_IP (\d+\.\d+\.\d+\.\d+|\w+\.\w+\.\w+)
+Value PLATFORM (.*)
+Value REMOTE_PORT (.*)
+Value LOCAL_PORT (.*)
+Value SOFTWARE_VERSION (.*$)
+Value CAPABILITIES (.*)
 
 Start
-  ^Device ID: ${dest_host}
-  ^Entry address\(es\): -> ParseIP
-  ^Platform: ${platform},
-  ^Interface: ${local_port},  Port ID \(outgoing port\): ${remote_port}
+  ^Device ID: ${DESTINATION_HOST}
+  ^Entry address\(es\)\s*:\s* -> ParseIP
+  ^Platform\s*:\s*${PLATFORM}\s*,\s*Capabilities\s*:\s*${CAPABILITIES}
+  ^Interface: ${LOCAL_PORT},  Port ID \(outgoing port\): ${REMOTE_PORT}
   ^Version : -> GetVersion
 
 ParseIP
-  ^.*IP address: ${mgmt_ip} -> Start
+  ^.*IP address: ${MANAGEMENT_IP} -> Start
+  ^Platform\s*:\s*${PLATFORM}\s*,\s*Capabilities\s*:\s*${CAPABILITIES} -> Start
+  ^.* -> Start
 
 GetVersion
-  ^${version} -> Record Start
+^${SOFTWARE_VERSION} -> Record Start
