--- a/templates/cisco_nxos_show_license.template
+++ b/templates/cisco_nxos_show_license.template
@@ -2,4 +2,4 @@ Value LICENSE (\S+)
 Value TYPE (\S+)
 
 Start
-  ^INCREMENT $(LICENSE)\s+\S+\s+\S+\s+$(TYPE).* -> Record
+  ^INCREMENT\s+${LICENSE}\s+\S+\s+\S+\s+${TYPE}.* -> Record
