--- a/templates/Archive/cisco_ios_show_cdp_nei_detail.template
+++ b/templates/Archive/cisco_ios_show_cdp_nei_detail.template
@@ -1,4 +1,4 @@
-Value Required DESTINATION_HOST (.*$)
+Value Required DESTINATION_HOST (\S+)
 Value INTERFACE_IP (\d+\.\d+\.\d+\.\d+|\w+\.\w+\.\w+)
 Value PLATFORM (.*)
 Value REMOTE_PORT (.*)
@@ -26,4 +26,4 @@ GetVersion
   
 GetManagementIP
   ^.*IP address: ${MANAGEMENT_IP} -> Start
-  ^.* -> Start
+
